Convert Style to px instead of %

--- a/src/App.css
+++ b/src/App.css
@@ -18,21 +18,20 @@ body {
 
 .app__content--top {
     position: relative;
-    padding-top: 11.5%;
-    padding-bottom: 4%;
+    padding-top: 305px;
+    padding-bottom: 41px;
     background-image: radial-gradient(circle at 35% 46%, #323232, #000);
 }
 
 .app__logo {
     display: block;
     margin: auto;
-    margin-bottom: 11.5%;
+    margin-bottom: 251px;
 }
 
 .app__instagram {
     position: absolute;
-    top: 11.5%;
-    margin-top: 52px;
+    top: 364px;
     font-size: 14px;
     letter-spacing: 0.4px;
     text-align: center;
@@ -47,13 +46,14 @@ body {
 }
 
 .app__description {
-    margin: 0;
-    padding: 0 20.5%;
+    margin: auto;
+    padding: 0 16px;
     font-size: 40px;
     font-weight: 600;
     line-height: 1.7;
     color: #FBFBFB;
     text-align: center;
+    max-width: 835px;
 }
 
 .app__description-underline--blue {
@@ -74,7 +74,7 @@ body {
 .app__content--bottom {
     background-image: linear-gradient(to top, #181818, #2E2E2E);
     box-shadow: 0 -8px 64px 0 rgba(0, 0, 0, 0.5);
-    padding-top: 60px;
+    padding-top: 53px;
 }
 
 .app__email {
@@ -93,6 +93,7 @@ body {
 .app__email-form {
     display: block;
     margin: 24px auto;
+    margin-bottom: 0;
     width: 458px;
     max-width: 60%;
 }
@@ -151,7 +152,8 @@ body {
     text-align: center;
     color: rgba(255, 255, 255, 0.1);
     max-width: 800px;
-    margin: 40px auto;
+    margin: 37px auto;
+    margin-bottom: 40px;
 }
 
 .app__content--bottom-image {
@@ -206,4 +208,26 @@ body {
     margin-right: 8px;
     position: relative;
     top: 2px;
+}
+
+@media (max-width: 680px) {
+    .app__footer {
+        height: auto;
+        padding: 16px;
+        font-size: 12px;
+    }
+
+    .app__footer-copyright,
+    .app__footer-contact {
+        float: initial;
+    }
+
+    .app__footer-contact a {
+        display: block;
+        margin-top: 16px;
+    }
+
+    .app__footer-contact a:first-child {
+        margin-right: 0;
+    }
 }
