--- a/src/App.css
+++ b/src/App.css
@@ -220,7 +220,7 @@ body {
     z-index: 10;
     font-size: 100px;
     font-weight: bold;
-    line-height: 1;
+    line-height: 1.1;
     text-align: center;
     color: rgba(255, 255, 255, 0.1);
     max-width: 800px;
@@ -429,6 +429,20 @@ body {
 }
 
 @media (max-width: 768px) {
+    .app__description {
+        font-size: 32px;
+        max-width: 704px;
+    }
+
+    .app__content--bottom h2 {
+        font-size: 80px;
+        max-width: 704px;
+    }
+
+    .app__content--bottom-image {
+        margin-top: -80px;
+    }
+
     .app__footer {
         height: auto;
         padding: 16px;
@@ -447,6 +461,48 @@ body {
 
     .app__footer-contact a:first-child {
         margin-right: 0;
+    }
+}
+
+@media (max-width: 420px) {
+    .app__content--top {
+        padding-top: 180px;
+    }
+
+    .app__instagram {
+        display: none;
+    }
+
+    .app__logo {
+        margin-top: 40px;
+    }
+
+    .app__logo--show {
+        margin-top: -10px;
+        margin-bottom: 128px;
+    }
+
+    .app__description {
+        font-size: 18px;
+        padding: 0 24px;
+    }
+
+    .app__email-form {
+        max-width: 86%;
+    }
+
+    .app__email label {
+        font-size: 16px;
+    }
+
+    .app__content--bottom h2 {
+        font-size: 50px;
+        padding: 0 24px;
+    }
+
+    .app__content--bottom-image {
+        width: 180px;
+        margin-top: -48px;
     }
 }
 
